@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV-Simple/Text-CSV-Simple-1.00.ebuild,v 1.3 2006/09/17 00:09:58 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV-Simple/Text-CSV-Simple-1.00.ebuild,v 1.5 2007/01/19 16:57:26 mcummings Exp $
 
 EAPI="prefix"
 
@@ -8,7 +8,7 @@ inherit perl-module
 
 DESCRIPTION="Text::CSV::Simple - Simpler parsing of CSV files"
 SRC_URI="mirror://cpan/authors/id/T/TM/TMTM/${P}.tar.gz"
-HOMEPAGE="http://search.cpan.org/~tmtm/${P}/"
+HOMEPAGE="http://search.cpan.org/~tmtm/"
 
 SLOT="0"
 LICENSE="GPL-2"
@@ -19,4 +19,3 @@ DEPEND="dev-perl/Text-CSV_XS
 		dev-perl/Class-Trigger
 		dev-perl/File-Slurp
 		dev-lang/perl"
-RDEPEND="${DEPEND}"
